fix(layout): update expand/collapse icons to use SVG masks

--- a/src/app/components/layout-list/layout-list.component.scss
+++ b/src/app/components/layout-list/layout-list.component.scss
@@ -75,14 +75,21 @@
 					min-width: 20px;
 
 					&::after {
-						content: '+';
-						color: var(--main-content-text-color-muted);
-						font-size: 1.2em;
+						content: "";
+						display: inline-block;
+						width: 1.2em;
+						height: 1.2em;
+						vertical-align: middle;
+						background-color: var(--main-content-text-color-muted);
+						mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M7 10l5 5 5-5z'/%3E%3C/svg%3E");
+						mask-repeat: no-repeat;
+						mask-size: contain;
+						mask-position: center;
 					}
 
 					&.expanded {
 						&::after {
-							content: "-";
+							mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M7 14l5-5 5 5z'/%3E%3C/svg%3E");
 						}
 					}
 				}
